Fix padding on iPhones

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -133,7 +133,7 @@ hr {
 
 #contacts li {
     display: inline-block;
-    padding: 2.5em;
+    padding: 2em;
 }
 
 #contacts i {
@@ -150,7 +150,7 @@ hr {
 }
 
 #profile-child {
-    padding: 3.5em 1.5em;
+    padding: 3em 1.5em;
 }
 
 
